log/build_2021-06-09_20-12-16/control_pkg/stderr.log
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:81:1: error: invalid use of template-name ‘std::chrono::time_point’ without an argument list
   81 | std::chrono::time_point start_time = std::chrono::system_clock::now();
      | ^~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:81:1: note: class template argument deduction is only available with ‘-std=c++17’ or ‘-std=gnu++17’
In file included from /usr/include/c++/9/mutex:39,
                 from /usr/include/c++/9/future:38,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:1:
/usr/include/c++/9/chrono:65:14: note: ‘template<class _Clock, class _Dur> struct std::chrono::time_point’ declared here
   65 |       struct time_point;
      |              ^~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:82:1: error: invalid use of template-name ‘std::chrono::time_point’ without an argument list
   82 | std::chrono::time_point end_time = std::chrono::system_clock::now();
      | ^~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:82:1: note: class template argument deduction is only available with ‘-std=c++17’ or ‘-std=gnu++17’
In file included from /usr/include/c++/9/mutex:39,
                 from /usr/include/c++/9/future:38,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:1:
/usr/include/c++/9/chrono:65:14: note: ‘template<class _Clock, class _Dur> struct std::chrono::time_point’ declared here
   65 |       struct time_point;
      |              ^~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:83:36: error: ‘end_time’ was not declared in this scope
   83 | std::chrono::duration<double> dt = end_time - start_time;
      |                                    ^~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:83:47: error: ‘start_time’ was not declared in this scope; did you mean ‘strptime’?
   83 | std::chrono::duration<double> dt = end_time - start_time;
      |                                               ^~~~~~~~~~
      |                                               strptime
make[2]: *** [CMakeFiles/control_pid_p1_node.dir/build.make:63: CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/control_pid_p1_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
